--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -322,3 +322,35 @@ footer {
     color: $blanco;
     margin-top: 60px;
 }
+
+img, iframe, video {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.container {
+  width: 100%;
+  margin-inline: auto;
+  padding-inline: 16px;
+  max-width: 1200px;
+}
+
+@media (max-width: 768px) {
+  .row, .columns, .grid, .cards {
+    display: block;
+  }
+}
+
+@media (max-width: 576px) {
+  h1 { font-size: 1.8rem; }
+  h2 { font-size: 1.5rem; }
+  h3 { font-size: 1.25rem; }
+}
+
+@media (max-width: 576px) {
+  main, section {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
